Add recipe controller, services and end points for that

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,15 @@ spring.datasource.url=jdbc:h2:~/recipesdb;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.show_sql=false
+spring.jpa.show_sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 entitymanager.packagesToScan=com.example.recipesApp
 spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
+
+#**********************
+#** Swagger doc path
+#**********************
+springfox.documentation.swagger.v2.path=/my/docs
