--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+application.environment=This is a local Environment
+
 #**********************
 #** Server & Logging
 #**********************
@@ -27,3 +29,4 @@ spring.h2.console.path=/console
 #** Swagger doc path
 #**********************
 springfox.documentation.swagger.v2.path=/my/docs
+
